integrated generator-ms

--- a/ansible/roles/configurations/templates/docker-compose.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml.j2
@@ -28,8 +28,8 @@ services:
       - 3001:3001
     networks:
       - cqube_net
-  flask_app:
-    image: flask_ms:1
+  generator_app:
+    image: generator_ms:1
     ports:
       - 3003:3003
     volumes:
