db CRED's changed in generator

--- a/ansible/roles/generator/templates/config.ini.j2
+++ b/ansible/roles/generator/templates/config.ini.j2
@@ -2,8 +2,8 @@
 
 # Postgres credentials ####################
 
-host     = postgres_app
-port     = 5432
+db_host     = postgres_app
+db_port     = 5432
 database = {{ db_name }}
-user     = {{ db_user }}
-password = {{ db_password }}
+db_user     = {{ db_user }}
+db_password = {{ db_password }}
