--- a/ansible/roles/configurations/templates/docker-compose.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml.j2
@@ -47,9 +47,9 @@ services:
     volumes:
       - generator_volume:/generator_data
       - python_executable_env:/usr/local/lib/python3.7/dist-packages
-      - input_volume:/app/input-data
-      - archived_volume:/app/archived-data
-      - processing_volume:/app/processing-data
+      - input_volume:/input-data
+      - archived_volume:/archived-data
+      - processing_volume:/processing-data
     environment:
       - NIFI_WEB_HTTP_HOST=0.0.0.0
       - NIFI_WEB_HTTP_PORT=8096
