--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -9,12 +9,15 @@ server {
         
         location /ingestion {
                 proxy_pass http://{{ local_ipv4_address }}:3000;
-                client_max_body_size 100M;
+                client_max_body_size 2G;
+                proxy_read_timeout 600;
+                proxy_connect_timeout 600;
+                proxy_send_timeout 600;
                 #try_files $uri $uri/ =404;
         }
         location /spec {
                 proxy_pass http://{{ local_ipv4_address }}:3001;
-                client_max_body_size 100M;
+                client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
         }
         location /generator {
