--- a/ansible/roles/configurations/templates/docker-compose.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml.j2
@@ -20,8 +20,7 @@ services:
     image: ingestion_ms:1
     volumes:
       - input_volume:/app/input-files
-      - archived_volume:/app/archived-files
-      - processing_volume:/app/processing-files
+      - error_volume:/app/error-files
     ports:
       - 3000:3000
     networks:
@@ -48,8 +47,7 @@ services:
       - generator_volume:/generator_data
       - python_executable_env:/usr/local/lib/python3.7/dist-packages
       - input_volume:/input_data
-      - archived_volume:/archived_data
-      - processing_volume:/processing_data
+      - error_volume:/error_data
     environment:
       - NIFI_WEB_HTTP_HOST=0.0.0.0
       - NIFI_WEB_HTTP_PORT=8096
@@ -67,6 +65,5 @@ networks:
 volumes:
   python_executable_env:
   generator_volume:
-  archived_volume:
   input_volume:
-  processing_volume:
+  error_volume:
