--- a/ansible/roles/configurations/templates/docker-compose.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml.j2
@@ -39,6 +39,12 @@ services:
       - 3003:3003
     networks:
       - cqube_net
+  dashboard_app:
+    image: dashboard_ms:1
+    ports:
+      - 4200:80
+    networks:
+      - cqube_net
   nifi_app:
     image: nifi_ms:1
     ports:
@@ -51,6 +57,25 @@ services:
     environment:
       - NIFI_WEB_HTTP_HOST=0.0.0.0
       - NIFI_WEB_HTTP_PORT=8096
+    networks:
+      - cqube_net
+  kong_app:
+    image: kong:latest
+    volumes:
+      - ./kong.yml:/usr/local/kong/declarative/kong.yml
+    environment:
+      - KONG_DATABASE=off
+      - KONG_DECLARATIVE_CONFIG=/usr/local/kong/declarative/kong.yml
+      - KONG_PROXY_ACCESS_LOG=/dev/stdout
+      - KONG_ADMIN_ACCESS_LOG=/dev/stdout
+      - KONG_PROXY_ERROR_LOG=/dev/stderr
+      - KONG_ADMIN_ERROR_LOG=/dev/stderr
+      - KONG_ADMIN_LISTEN=0.0.0.0:8001
+    ports:
+      - "8000:8000"
+      - "8433:8433"
+      - "127.0.0.1:8001:8001"
+      - "127.0.0.1:8444:8444"
     networks:
       - cqube_net
   nginx_app:
