--- a/ansible/roles/generator/templates/config.ini.j2
+++ b/ansible/roles/generator/templates/config.ini.j2
@@ -7,3 +7,4 @@ db_port     = 5432
 database = {{ db_name }}
 db_user     = {{ db_user }}
 db_password = {{ db_password }}
+server_url = http://{{ api_end_point }}
