kong and nginx routing changes

--- a/ansible/roles/dashboard/templates/environment.prod.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod.ts.j2
@@ -1,6 +1,6 @@
 export const environment = {
   production: true,
-  apiURL: 'http://{{ api_endpoint }}/ingestion',
+  apiURL: 'http://{{ api_endpoint }}/api/ingestion',
   stateCode: "HP",
   numberFormat: {
     reports: {
