--- a/ansible/roles/generator/templates/config.ini.j2
+++ b/ansible/roles/generator/templates/config.ini.j2
@@ -8,3 +8,7 @@ database = {{ db_name }}
 db_user     = {{ db_user }}
 db_password = {{ db_password }}
 server_url = http://{{ api_endpoint }}
+error_bucket_name = {{ s3_error_bucket }}
+archived_bucket_name = {{ s3_archived_bucket }}
+s3_access_key = {{ aws_access_key }}
+s3_secret_key = {{ aws_secret_key }}
