--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -1,37 +1,21 @@
 server {
         listen       80;
         listen  [::]:80;
-        
+
         root   /usr/share/nginx/html;
         index  index.html index.htm;
 
         server_name {{ api_endpoint }};
-        
-        location /ingestion {
-                proxy_pass http://{{ local_ipv4_address }}:3000;
-                client_max_body_size 2G;
-                proxy_read_timeout 600;
-                proxy_connect_timeout 600;
-                proxy_send_timeout 600;
+
+        location / {
+                proxy_pass http://{{ local_ipv4_address }}:4200;
+                #client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
         }
-        location /spec {
-                proxy_pass http://{{ local_ipv4_address }}:3001;
-                client_max_body_size 2G;
+        location /api {
+                proxy_pass http://{{ local_ipv4_address }}:8000;
+                #client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
         }
-        location /generator {
-                proxy_pass http://{{ local_ipv4_address }}:3003;
-                #try_files $uri $uri/ =404;
-        }
-        location /nifi {
-                proxy_pass http://{{ local_ipv4_address }}:8096;
-                client_max_body_size 10M;
-                proxy_read_timeout 120s;
-                proxy_send_timeout 120s;
-                proxy_connect_timeout 120s;
-                proxy_set_header X-Forwarded-Proto https;
-                proxy_set_header Host $host;
-                #try_files $uri $uri/ =404;
-        }
+
 }
