changed generaor routing issue

--- a/ansible/roles/configurations/templates/kong.yml.j2
+++ b/ansible/roles/configurations/templates/kong.yml.j2
@@ -15,9 +15,9 @@ services:
         paths:
           - /api/spec
 
-  - name: flask-ms
-    url: http://flask_app:3003/api/generator
+  - name: generator-ms
+    url: http://generator_app:3003/api/generator
     routes:
-      - name: flask-ms
+      - name: generator-ms
         paths:
           - /api/generator
