changed nifi parameters in env files and added gitbook links

--- a/ansible/roles/generator/templates/config.ini.j2
+++ b/ansible/roles/generator/templates/config.ini.j2
@@ -8,6 +8,8 @@ database = {{ db_name }}
 db_user     = {{ db_user }}
 db_password = {{ db_password }}
 server_url = http://{{ api_endpoint }}
+nifi_host = nifi_app
+nifi_port = 8096
 error_bucket_name = {{ s3_error_bucket }}
 archived_bucket_name = {{ s3_archived_bucket }}
 s3_access_key = {{ aws_access_key }}
