changes in kong and config.ini file

--- a/ansible/roles/generator/templates/config.ini.j2
+++ b/ansible/roles/generator/templates/config.ini.j2
@@ -8,7 +8,7 @@ database = {{ db_name }}
 db_user = {{ db_user }}
 db_password = {{ db_password }}
 server_url = http://{{ api_endpoint }}
-nifi_host = nifi_app
+nifi_host = http://nifi_app
 nifi_port = 8096
 spec_host = http://spec_app
 spec_port = 3001
