--- a/ansible/roles/configurations/templates/kong.yml.j2
+++ b/ansible/roles/configurations/templates/kong.yml.j2
@@ -2,14 +2,14 @@ _format_version: "2.1"
    
 services:
   - name: ingestion-ms
-    url: http://ingest_app:3000/api/ingestion
+    url: http://ingest_app:3000
     routes:
       - name: ingestion-ms
         paths:
           - /api/ingestion
 
   - name: spec-ms
-    url: http://spec_app:3001/api/spec
+    url: http://spec_app:3001
     routes:
       - name: spec-ms
         paths:
