updated ingest_host and port in config.ini.j2

--- a/ansible/roles/generator/templates/config.ini.j2
+++ b/ansible/roles/generator/templates/config.ini.j2
@@ -14,6 +14,8 @@ spec_host = http://spec_app
 spec_port = 3001
 generator_host = http://generator_app
 generator_port = 3003
+ingestion_host = http://ingestion_app
+ingestion_port = 3000
 error_bucket_name = {{ s3_error_bucket }}
 archived_bucket_name = {{ s3_archived_bucket }}
 s3_access_key = {{ aws_access_key }}
