ingegrated aws and sdc support

--- a/ansible/roles/configurations/templates/docker-compose.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml.j2
@@ -45,6 +45,12 @@ services:
       - 4200:80
     networks:
       - cqube_net
+  querybuilder_app:
+    image: querybuilder_ms:1
+    ports:
+      - 4002:3002
+    networks:
+      - cqube_net
   nifi_app:
     image: nifi_ms:1
     ports:
