--- a/ansible/roles/configurations/templates/program_selector.yml.j2
+++ b/ansible/roles/configurations/templates/program_selector.yml.j2
@@ -1,4 +1,4 @@
-template,status
+program_id,status
 studentAttendance,{% if studentAttendance == true %}1{% endif %}{% if studentAttendance == false %}0{% endif %}{{''}}
 teacherAttendance,{% if teacherAttendance == true %}1{% endif %}{% if teacherAttendance == false %}0{% endif %}{{''}}
 reviewMeetings,{% if reviewMeetings == true %}1{% endif %}{% if reviewMeetings == false %}0{% endif %}{{''}}
