--- a/ansible/roles/postgres/templates/init.sql.j2
+++ b/ansible/roles/postgres/templates/init.sql.j2
@@ -1,3 +1,3 @@
-CREATE ROLE READONLY_USER WITH LOGIN ENCRYPTED PASSWORD 'READONLY_PASS';
-GRANT CONNECT ON DATABASE POSTGRES_DB TO READONLY_USER;
-GRANT SELECT ON ALL TABLES IN SCHEMA public TO READONLY_USER;
+CREATE ROLE {{ read_only_db_user }} WITH LOGIN ENCRYPTED PASSWORD '{{ read_only_db_password }}';
+GRANT CONNECT ON DATABASE {{ db_name }} TO {{ read_only_db_user }};
+GRANT SELECT ON ALL TABLES IN SCHEMA public TO {{ read_only_db_user }};
