program selector changes

--- a/ansible/roles/configurations/templates/program_selector.csv.j2
+++ b/ansible/roles/configurations/templates/program_selector.csv.j2
@@ -1,10 +1,10 @@
 program_id,status
-studentAttendance,{% if studentAttendance == true %}1{% endif %}{% if studentAttendance == false %}0{% endif %}{{''}}
-teacherAttendance,{% if teacherAttendance == true %}1{% endif %}{% if teacherAttendance == false %}0{% endif %}{{''}}
-reviewMeetings,{% if reviewMeetings == true %}1{% endif %}{% if reviewMeetings == false %}0{% endif %}{{''}}
-pgi,{% if pgi == true %}1{% endif %}{% if pgi == false %}0{% endif %}{{''}}
-pmPoshan,{% if pmPoshan == true %}1{% endif %}{% if pmPoshan == false %}0{% endif %}{{''}}
-udise,{% if udise == true %}1{% endif %}{% if udise == false %}0{% endif %}{{''}}
-nas,{% if nas == true %}1{% endif %}{% if nas == false %}0{% endif %}{{''}}
-diksha,{% if diksha == true %}1{% endif %}{% if diksha == false %}0{% endif %}{{''}}
-nishtha,{% if nishtha == true %}1{% endif %}{% if nishtha == false %}0{% endif %}{{''}}
+studentAttendance,{% if studentAttendance == true %}true{% endif %}{% if studentAttendance == false %}false{% endif %}{{''}}
+teacherAttendance,{% if teacherAttendance == true %}true{% endif %}{% if teacherAttendance == false %}false{% endif %}{{''}}
+reviewMeetings,{% if reviewMeetings == true %}true{% endif %}{% if reviewMeetings == false %}false{% endif %}{{''}}
+pgi,{% if pgi == true %}true{% endif %}{% if pgi == false %}false{% endif %}{{''}}
+pmPoshan,{% if pmPoshan == true %}true{% endif %}{% if pmPoshan == false %}false{% endif %}{{''}}
+udise,{% if udise == true %}true{% endif %}{% if udise == false %}false{% endif %}{{''}}
+nas,{% if nas == true %}true{% endif %}{% if nas == false %}false{% endif %}{{''}}
+diksha,{% if diksha == true %}true{% endif %}{% if diksha == false %}false{% endif %}{{''}}
+nishtha,{% if nishtha == true %}true{% endif %}{% if nishtha == false %}false{% endif %}{{''}}
