minio and .env changes

--- a/ansible/roles/generator/templates/config.ini_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_azure.j2
@@ -16,6 +16,4 @@ ingestion_port = 3000
 generator_host = http://generator_app
 generator_port = 3003
 azure_storage_conn_str = {{ azure_storage_connection_string }}
-azure_output_storage = {{ azure_output_container }}
-azure_archived_storage = {{ azure_archived_container }}
-azure_error_storage = {{ azure_error_container }}
+azure_container = {{ azure_container }}
