--- a/ansible/roles/generator/templates/config.ini_local.j2
+++ b/ansible/roles/generator/templates/config.ini_local.j2
@@ -15,5 +15,6 @@ ingestion_host = http://ingest_app
 ingestion_port = 3000
 generator_host = http://generator_app
 generator_port = 3003
-ARCHIVED_DIRECTORY= {{ local_archived_dir }}
-ERROR_DIRECTORY= {{ local_error_dir }}
+MINIO_USERNAME = {{ minio_username }}
+MINIO_PASSWORD = {{ minio_password }}
+MINIO_BUCKET = {{ minio_bucket }}
