--- a/ansible/roles/generator/templates/config.ini_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_aws.j2
@@ -15,7 +15,6 @@ ingestion_host = http://ingest_app
 ingestion_port = 3000
 generator_host = http://generator_app
 generator_port = 3003
-error_bucket_name = {{ s3_error_bucket }}
-archived_bucket_name = {{ s3_archived_bucket }}
 s3_access_key = {{ aws_access_key }}
 s3_secret_key = {{ aws_secret_key }}
+s3_bucket = {{ s3_bucket }}
