changed azure variable in generator

--- a/ansible/roles/generator/templates/config.ini_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_azure.j2
@@ -15,5 +15,5 @@ ingestion_host = http://ingest_app
 ingestion_port = 3000
 generator_host = http://generator_app
 generator_port = 3003
-azure_storage_conn_str = {{ azure_storage_connection_string }}
+azure_storage_conn_str = {{ azure_connection_string }}
 azure_container = {{ azure_container }}
