changes in configurations

--- a/ansible/roles/configurations/templates/docker-compose.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml.j2
@@ -33,6 +33,12 @@ services:
       - 3001:3001
     networks:
       - cqube_net
+  grammar_app:
+    image: grammar_ms:1
+    ports:
+      - 3004:3004
+    networks:
+      - cqube_net
   generator_app:
     image: generator_ms:1
     volumes:
