--- a/ansible/roles/generator/templates/config.ini_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_aws.j2
@@ -1,20 +1,7 @@
 [CREDs]
 
-# Postgres credentials ####################
-
-db_host = postgres_app
-db_port = 5432
-database = {{ db_name }}
-db_user = {{ db_user }}
-db_password = {{ db_password }}
-nifi_host = http://nifi_app
-nifi_port = 8096
-spec_host = http://spec_app
-spec_port = 3001
-ingestion_host = http://ingest_app
-ingestion_port = 3000
-generator_host = http://generator_app
-generator_port = 3003
-s3_access_key = {{ aws_access_key }}
-s3_secret_key = {{ aws_secret_key }}
+# storage credentials ####################
+storage_type = {{ storage_type }}
+aws_access_key = {{ aws_access_key }}
+aws_secret_key = {{ aws_secret_key }}
 s3_bucket = {{ s3_bucket }}
