updated the docker-compose.yml_upgrade.j2

--- a/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
@@ -23,7 +23,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - /home/{{ system_user_name }}/old_input_files:/app
+      - /home/{{ system_user_name }}/old_input_files
     networks:
       - cqube_net
   spec_app:
