--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -2,6 +2,7 @@
 
 nifi_host = http://nifi_app
 nifi_port = 8096
-nifi_schedule_latest_code = '0 0 12 * * ?'
 azure_connection_string = {{ azure_connection_string }}
 azure_container = {{ azure_container }}
+plugin_time = {{ plugin_time }}
+processing_time = {{ processing_time }}
