--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -2,6 +2,8 @@
 
 nifi_host = http://nifi_app
 nifi_port = 8096
+azure_account_name = {{ azure_account_name }}
+azure_account_key = {{ azure_account_key }}
 azure_connection_string = {{ azure_connection_string }}
 azure_container = {{ azure_container }}
 plugin_time = {{ plugin_time }}
