modified config files of pg's

--- a/ansible/roles/generator/templates/config.ini_pg_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_aws.j2
@@ -1,5 +1,7 @@
 [CREDs]
 
+# storage credentials ####################
+storage_type = {{ storage_type }}
 nifi_host = http://nifi_app
 nifi_port = 8096
 s3_access_key = {{ aws_access_key }}
