--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -1,5 +1,7 @@
 [CREDs]
 
+# storage credentials ####################
+storage_type = {{ storage_type }}
 nifi_host = http://nifi_app
 nifi_port = 8096
 azure_account_name = {{ azure_account_name }}
