--- a/ansible/roles/generator/templates/config.ini_pg_local.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_local.j2
@@ -1,5 +1,7 @@
 [CREDs]
 
+# storage credentials ####################
+storage_type = {{ storage_type }}
 nifi_host = http://nifi_app
 nifi_port = 8080
 minio_end_point= http://localhost
