modified ingest script

--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -22,4 +22,4 @@ echo "***************************************************** Installing the yarn 
 yarn install
 
 npx prisma generate
-yarn cli ingest debug=false -y
+npx prisma migrate dev
