removed grammer from one step

--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -1,15 +1,15 @@
 #!/bin/bash
 
 
-result=$(curl -X GET --header "Accept: */*" "https://api.github.com/repos/ChakshuGautam/cQube-POCs/releases/latest")
-echo "******************************************************* Response from server ********************************************************"
-key='zipball_url'
-value=$(echo $result | jq -r ".$key")
-echo "$value"
+#result=$(curl -X GET --header "Accept: */*" "https://api.github.com/repos/ChakshuGautam/cQube-POCs/releases/latest")
+#echo "******************************************************* Response from server ********************************************************"
+#key='zipball_url'
+#value=$(echo $result | jq -r ".$key")
+#echo "$value"
 rm -rf cqube-ingest.zip
 rm -rf ChakshuGautam-cQube-POCs*
 echo "***************************************************** Downloading the zip file ******************************************************"
-wget -O cqube-ingest.zip $value
+wget -O cqube-ingest.zip https://api.github.com/repos/ChakshuGautam/cQube-POCs/zipball/v0.2
 echo "****************************************************** Unzipping the zip file *******************************************************"
 unzip cqube-ingest.zip
 cd ChakshuGautam-cQube-POCs*
