--- a/ansible/roles/dashboard/templates/environment_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment_local.ts.j2
@@ -1,6 +1,6 @@
 export const environment = {
   production: false,
-  apiURL: 'http://{{ api_endpoint }}:3002/api/queryBuilder',
+  apiURL: 'http://{{ api_endpoint }}:3002',
   stateCode: "HP",
   numberFormat: {
     reports: {
