--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -22,4 +22,4 @@ echo "***************************************************** Installing the yarn 
 yarn install
 
 npx prisma generate
-npx prisma migrate dev
+npx prisma migrate deploy
