changed ingestion script of nifi

--- a/ansible/roles/nifi/templates/cqube-ingest.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest.sh.j2
@@ -5,4 +5,5 @@ echo "Data ingestion is in progress"
 cd ChakshuGautam-cQube-POCs*
 cd impl/c-qube
 yarn cli ingest debug=false
+yarn cli ingest-data debug=true
 echo "Data ingestion completed"
