changed env in dashboard

--- a/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
@@ -1,16 +1,12 @@
 export const environment = {
   production: true,
   apiURL: 'http://{{ api_endpoint }}:3002',
-  stateCode: "HP",
+  stateCode: "{{ state_name }}",
   numberFormat: {
     reports: {
       locale: 'en-IN',
-      format: 'long'
+      format: 'short'
     }
   },
-  app_header_title: "भारत सरकार | Government of India",
-  app_header_image_1: "Flag_of_India.svg",
-  content_header_image_1: "MoE.png",
-  content_header_image_2: "ncert_logo_vector_modified.png",
   google_analytics_tracking_id: "{{ google_analytics_tracking_id }}"
 };
