--- a/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
@@ -36,6 +36,8 @@ services:
     image: generator_ms:1
     ports:
       - 3003:3003
+    volumes:
+      - adapter_volume:/python_app/adapter
     networks:
       - cqube_net
   dashboard_app:
@@ -56,6 +58,7 @@ services:
       - 8096:8096
     volumes:
       - python_executable_env:/usr/local/lib/python3.7/dist-packages
+      - adapter_volume:/adapter
     environment:
       - NIFI_WEB_HTTP_HOST=0.0.0.0
       - NIFI_WEB_HTTP_PORT=8096
@@ -91,3 +94,4 @@ networks:
   cqube_net:
 volumes:
   python_executable_env:
+  adapter_volume:
