--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -7,6 +7,7 @@ nifi_port = 8096
 azure_account_name = {{ azure_account_name }}
 azure_account_key = {{ azure_account_key }}
 azure_connection_string = {{ azure_connection_string }}
+adapter_schedule_time = {{ adapter_scheduler_time }}
 azure_container = {{ azure_container }}
 plugin_time = {{ plugin_time }}
 processing_time = {{ processing_time }}
