--- a/ansible/roles/generator/templates/config.ini_pg_local.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_local.j2
@@ -4,10 +4,11 @@
 storage_type = {{ storage_type }}
 nifi_host = http://nifi_app
 nifi_port = 8096
-minio_end_point= http://localhost
+minio_end_point= http://{{ minio_ip_address }}
 minio_port = 9000
 minio_access_key = {{ minio_username }}
 minio_secret_key = {{ minio_password }}
 minio_bucket = {{ minio_bucket }}
+adapter_schedule_time = {{ adapter_scheduler_time }}
 plugin_time = {{ plugin_time }}
 processing_time = {{ processing_time }}
