--- a/ansible/roles/generator/templates/config.ini_local.j2
+++ b/ansible/roles/generator/templates/config.ini_local.j2
@@ -3,8 +3,8 @@
 # storage credentials ####################
 
 storage_type = {{ storage_type }}
-minio_end_point= http://localhost
+minio_end_point= localhost
 minio_port = 9000
-minio_access_key = {{ minio_username }}
-minio_secret_key = {{ minio_password }}
+minio_username = {{ minio_username }}
+minio_password = {{ minio_password }}
 minio_bucket = {{ minio_bucket }}
