--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -14,7 +14,7 @@ server {
         }
         location /api {
                 proxy_pass http://{{ local_ipv4_address }}:8000;
-                #client_max_body_size 2G;
+                client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
         }
 
