--- a/ansible/roles/generator/templates/config.ini_local.j2
+++ b/ansible/roles/generator/templates/config.ini_local.j2
@@ -3,7 +3,7 @@
 # storage credentials ####################
 
 storage_type = {{ storage_type }}
-minio_end_point= localhost
+minio_end_point= {{ minio_ip_address }}
 minio_port = 9000
 minio_username = {{ minio_username }}
 minio_password = {{ minio_password }}
