--- a/ansible/roles/configurations/templates/docker-compose.yml_install.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_install.j2
@@ -23,8 +23,8 @@ services:
     ports:
       - 8080:8080
     environment:
-      - KEYCLOAK_USER={{ keycloak_user }}
-      - KEYCLOAK_PASSWORD={{ keycloak_password }}
+      - KEYCLOAK_USER={{ keycloak_adm_name }}
+      - KEYCLOAK_PASSWORD={{ keycloak_adm_password }}
     networks:
       - cqube_net
   ingest_app:
