--- a/ansible/roles/dashboard/templates/environment.prod.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod.ts.j2
@@ -9,6 +9,7 @@ export const environment = {
     }
   },
   google_analytics_tracking_id: "{{ google_analytics_tracking_id }}",
+  config: "state",
   keycloakRealm: "cQube",
   keycloakUrl: "http://{{ api_endpoint }}/auth",
   keycloakClient: "cqube-5.0",
