--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -17,5 +17,12 @@ server {
                 client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
         }
-
+        location /auth {
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header Host $host;
+                proxy_pass http://{{ local_ipv4_address }}:8080$request_uri;
+                proxy_set_header X-Forwarded-Proto https;
+                proxy_set_header Accept-Encoding "";
+        }
 }
