changes in compose file

--- a/ansible/roles/configurations/templates/keycloak.sh.j2
+++ b/ansible/roles/configurations/templates/keycloak.sh.j2
@@ -1,16 +1,11 @@
-#keycloak_adm_name=$(awk ''/^keycloak_adm_name:' /{ if ($2 !~ /#.*/) {print $2}}' config_files/upgradation_config.yml)
-#keycloak_adm_password=$(awk ''/^keycloak_adm_password:' /{ if ($2 !~ /#.*/) {print $2}}' config_files/upgradation_config.yml)
-keycloak_adm_name=$(awk ''/^keycloak_adm_name:' /{ if ($2 !~ /#.*/) {print $2}}' config_files/config.yml)
-keycloak_adm_password=$(awk ''/^keycloak_adm_password:' /{ if ($2 !~ /#.*/) {print $2}}' config_files/config.yml)
+#!/bin/bash
 
 sleep 30
-sudo docker exec -i  ansible_keycloak_app_1 sh << 'EOF'
+sudo docker exec -i keycloak_app sh << 'EOF'
 /opt/jboss/keycloak/bin/kcadm.sh config credentials --server http://localhost:8080/auth --realm master --user {{ keycloak_adm_name }} --password {{ keycloak_adm_password }}
 
 /opt/jboss/keycloak/bin/kcadm.sh create realms -s realm=cQube -s enabled=true -o
 
 /opt/jboss/keycloak/bin/kcadm.sh create clients -r cQube -s clientId=cqube-5.0 -s enabled=true -s clientAuthenticatorType=client-secret -s secret=d0b8122f-8dfb-46h7-b69a-f5cc4e25d000
 
-
 EOF
-
