ansible nifi changes updated

--- a/ansible/roles/nifi/templates/cqube-ingest.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest.sh.j2
@@ -2,8 +2,7 @@
 
 ## Executing yarn cli command to ingest data##
 echo "Data ingestion is in progress"
-cd ChakshuGautam-cQube-POCs*
-cd impl/c-qube
+cd Sunbird-cQube-grammar-ms-178386a/c-qube
 yarn cli ingest debug=false
 yarn cli ingest-data debug=true
 echo "Data ingestion completed"
