--- a/ansible/roles/generator/templates/config.ini_pg_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_aws.j2
@@ -10,3 +10,4 @@ s3_input_bucket = {{ s3_bucket }}
 adapter_schedule_time = {{ adapter_scheduler_time }}
 plugin_time = {{ plugin_time }}
 processing_time = {{ processing_time }}
+instance_type = {{ access_type }}
