--- a/ansible/roles/generator/templates/config.ini_pg_local.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_local.j2
@@ -12,3 +12,4 @@ minio_bucket = {{ minio_bucket }}
 adapter_schedule_time = {{ adapter_scheduler_time }}
 plugin_time = {{ plugin_time }}
 processing_time = {{ processing_time }}
+instance_type = {{ access_type }}
