--- a/ansible/roles/generator/templates/config.ini_pg_oracle.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_oracle.j2
@@ -8,4 +8,4 @@ oracle_bucket = {{ oracle_bucket }}
 adapter_schedule_time = {{ adapter_scheduler_time }}
 plugin_time = {{ plugin_time }}
 processing_time = {{ processing_time }}
-
+instance_type = {{ access_type }}
