nifi processing files updated

--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -14,6 +14,7 @@ wget -O cqube-ingest.zip $value
 echo "****************************************************** Unzipping the zip file *******************************************************"
 unzip cqube-ingest.zip
 cd Sunbird-cQube-grammar-ms-178386a/c-qube
+mkdir debug
 echo "***************************************************** Adding Database_url to the .env file ******************************************"
 touch .env
 echo "DATABASE_URL=postgres://cqube_user:cQube@123@postgres_app:5432/cqube"> .env
