--- a/ansible/roles/nifi/templates/cqube-ingest.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest.sh.j2
@@ -3,6 +3,6 @@
 ## Executing yarn cli command to ingest data##
 echo "Data ingestion is in progress"
 cd Sunbird-cQube-grammar-ms-178386a/c-qube
-yarn cli ingest debug=false
-yarn cli ingest-data debug=true
+yarn cli ingest --debug=false
+yarn cli ingest-data --debug=true
 echo "Data ingestion completed"
