--- a/ansible/roles/generator/templates/config.ini_pg_oracle.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_oracle.j2
@@ -9,3 +9,5 @@ adapter_schedule_time = {{ adapter_scheduler_time }}
 plugin_time = {{ plugin_time }}
 processing_time = {{ processing_time }}
 instance_type = {{ access_type }}
+dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms-97fc3d0/impl/c-qube/ingest/dimensions/
+program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms-97fc3d0/impl/c-qube/ingest/programs/
