--- a/ansible/roles/dashboard/templates/environment_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment_local.ts.j2
@@ -1,6 +1,7 @@
 export const environment = {
   production: false,
   apiURL: 'http://{{ api_endpoint }}:3002',
+  config: "{{ access_type }}",
   stateCode: "{{ state_name }}",
   numberFormat: {
     reports: {
