changes for SSL are done in all env files

--- a/ansible/roles/dashboard/templates/environment.prod.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod.ts.j2
@@ -1,7 +1,6 @@
 export const environment = {
   production: true,
-  apiURL: 'http://{{ api_endpoint }}/api/queryBuilder',
-  config: "{{ access_type }}",
+  apiURL: 'https://{{ api_endpoint }}/api/queryBuilder',
   stateCode: "{{ state_name }}",
   numberFormat: {
     reports: {
@@ -12,7 +11,7 @@ export const environment = {
   google_analytics_tracking_id: "{{ google_analytics_tracking_id }}",
   config: "state",
   keycloakRealm: "cQube",
-  keycloakUrl: "http://{{ api_endpoint }}/auth",
+  keycloakUrl: "https://{{ api_endpoint }}/auth",
   keycloakClient: "cqube-5.0",
   keycloakSecret: "d0b8122f-8dfb-46h7-b69a-f5cc4e25d000"
 };
