--- a/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
@@ -30,6 +30,7 @@ services:
     environment:
       - KEYCLOAK_USER={{ keycloak_adm_name }}
       - KEYCLOAK_PASSWORD={{ keycloak_adm_password }}
+      - PROXY_ADDRESS_FORWARDING=true
     networks:
       - cqube_net
   ingest_app:
