--- a/ansible/roles/configurations/templates/docker-compose.yml_install.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_install.j2
@@ -116,7 +116,7 @@ services:
     image: nginx_ms:1
     restart: always
     volumes:
-      - {{ base_dir }}/cqube/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - {{ base_dir }}/cqube_v5/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
       - 443:443
