--- a/ansible/roles/configurations/templates/docker-compose.yml_install.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_install.j2
@@ -5,7 +5,7 @@ services:
     image: postgres_ms:1
     restart: always
     ports:
-      - 5434:5434
+      - 5434:5432
     environment:
       - POSTGRES_DB={{ db_name }}
       - POSTGRES_USER={{ db_user }}
@@ -116,7 +116,7 @@ services:
     image: nginx_ms:1
     restart: always
     volumes:
-      - {{ base_dir }}/cqube_v5/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - {{ base_dir }}/cqube_new/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
       - 443:443
