--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -21,7 +21,7 @@ server {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header Host $host;
-                proxy_pass http://{{ local_ipv4_address }}:8081request_uri;
+                proxy_pass http://{{ local_ipv4_address }}:8081$request_uri;
                 proxy_set_header X-Forwarded-Proto https;
                 proxy_set_header Accept-Encoding "";
         }
