--- a/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
+++ b/ansible/roles/configurations/templates/docker-compose.yml_upgrade.j2
@@ -125,4 +125,8 @@ networks:
   cqube_net:
 volumes:
   python_executable_env:
+    driver: local
+    name: python_executable_env
   adapter_volume:
+    driver: local
+    name: adapter_volume
