removed schedulers, added state code in config files

--- a/ansible/roles/generator/templates/config.ini_pg_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_aws.j2
@@ -7,10 +7,7 @@ nifi_port = 8096
 s3_access_key = {{ aws_access_key }}
 s3_secret_key = {{ aws_secret_key }}
 s3_input_bucket = {{ s3_bucket }}
-adapter_schedule_time = {{ adapter_scheduler_time }}
-plugin_time = {{ plugin_time }}
-processing_time = {{ processing_time }}
 instance_type = {{ access_type }}
+state_name = {{ state_name }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
-
