--- a/ansible/roles/generator/templates/config.ini_pg_local.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_local.j2
@@ -9,9 +9,7 @@ minio_port = 9000
 minio_access_key = {{ minio_username }}
 minio_secret_key = {{ minio_password }}
 minio_bucket = {{ minio_bucket }}
-adapter_schedule_time = {{ adapter_scheduler_time }}
-plugin_time = {{ plugin_time }}
-processing_time = {{ processing_time }}
 instance_type = {{ access_type }}
+state_name = {{ state_name }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
