--- a/ansible/roles/generator/templates/config.ini_pg_oracle.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_oracle.j2
@@ -5,9 +5,7 @@ storage_type = {{ storage_type }}
 nifi_host = http://nifi_app
 nifi_port = 8096
 oracle_bucket = {{ oracle_bucket }}
-adapter_schedule_time = {{ adapter_scheduler_time }}
-plugin_time = {{ plugin_time }}
-processing_time = {{ processing_time }}
 instance_type = {{ access_type }}
+state_name = {{ state_name }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
