added default scheduling cron syntax in processor group config.ini

--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -11,3 +11,7 @@ azure_container = {{ azure_container }}
 state_name = {{ state_name }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
+processing_time = * * * * * ?
+plugin_time = * * * * * ?
+adapter_schedule_time = * * * * * ?
+~                                    
