--- a/ansible/roles/generator/templates/config.ini_pg_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_aws.j2
@@ -11,3 +11,7 @@ instance_type = {{ access_type }}
 state_name = {{ state_name }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
+processing_time = * * * * * ?
+plugin_time = * * * * * ?
+adapter_schedule_time = * * * * * ?
+~                                    
