--- a/ansible/roles/configurations/templates/national_program_selector.csv.j2
+++ b/ansible/roles/configurations/templates/national_program_selector.csv.j2
@@ -3,9 +3,9 @@ nishtha,{% if nishtha == true %}true{% else %}false{% endif %}{{''}}
 pgi,{% if pgi == true %}true{% else %}false{% endif %}{{''}}
 pmPoshan,{% if pmPoshan == true %}true{% else %}false{% endif %}{{''}}
 diksha,{% if diksha == true %}true{% else %}false{% endif %}{{''}}
-microImprovements,{% if microImprovements == true %}true{% else %}false{% endif %}{{''}}
+microImprovement,{% if microImprovement == true %}true{% else %}false{% endif %}{{''}}
 nas,{% if nas == true %}true{% else %}false{% endif %}{{''}}
-udisePlus,{% if udisePlus == true %}true{% else %}false{% endif %}{{''}}
+udise,{% if udise == true %}true{% else %}false{% endif %}{{''}}
 nipunBharat,{% if nipunBharat == true %}true{% else %}false{% endif %}{{''}}
-ncertQuiz,{% if ncertQuiz == true %}true{% else %}false{% endif %}{{''}}
+quiz,{% if quiz == true %}true{% else %}false{% endif %}{{''}}
 ncf,{% if ncf == true %}true{% else %}false{% endif %}{{''}}
