added cqube version in environment files

--- a/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
@@ -3,6 +3,7 @@ export const environment = {
   apiURL: 'http://{{ api_endpoint }}:3002',
   config: "{{ access_type }}",
   stateCode: "{{ state_name }}",
+  cqubeVersion: ""{{ cqube_version }}"",
   numberFormat: {
     reports: {
       locale: 'en-IN',
