removed double quotations in dashboard environment files

--- a/ansible/roles/dashboard/templates/environment.prod.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod.ts.j2
@@ -2,7 +2,7 @@ export const environment = {
   production: true,
   apiURL: 'https://{{ api_endpoint }}/api/queryBuilder',
   config: "{{ access_type }}",
-  cqubeVersion: ""{{ cqube_version }}"",
+  cqubeVersion: "{{ cqube_version }}",
   stateCode: "{{ state_name }}",
   numberFormat: {
     reports: {
