--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -1,15 +1,15 @@
 #!/bin/bash
 
-result=$(curl -X GET --header "Accept: /" "https://github.com/Sunbird-cQube/processing-ms/releases/tag/bootcamp-july-21")
-echo "******************************************************* Response from server ********************************************************"
-key='zipball_url'
-value=$(echo $result | jq -r ".$key")
-echo "$result"
-echo "$value"
+#result=$(curl -X GET --header "Accept: /" "https://github.com/Sunbird-cQube/processing-ms/releases/tag/bootcamp-july-21")
+#echo "******************************************************* Response from server ********************************************************"
+#key='zipball_url'
+#value=$(echo $result | jq -r ".$key")
+#echo "$result"
+#echo "$value"
 rm -rf cqube-ingest.zip
 rm -rf Sunbird-cQube*
 echo "***************************************************** Downloading the zip file ******************************************************"
-wget -O cqube-ingest.zip $value
+wget -O cqube-ingest.zip 'https://github.com/Sunbird-cQube/processing-ms/releases/tag/bootcamp-july-21'
 echo "****************************************************** Unzipping the zip file *******************************************************"
 unzip cqube-ingest.zip
 mv Sunbird-cQube* Sunbird-cQube-processing-ms
