--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -7,7 +7,7 @@ nifi_port = 8096
 azure_account_name = {{ azure_account_name }}
 azure_account_key = {{ azure_account_key }}
 azure_connection_string = {{ azure_connection_string }}
-azure_container = {{ azure_container }}
+azure_container_name = {{ azure_container }}
 instance_type = {{ access_type }}
 state_name = {{ state_name }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
